tests/integration/tests/invalid_input/02_check_file_does_not_exist/sample.itest
; RUN: %expect_exit 2 %FILECHECK_EXEC "file/does/not/exist" | %FILECHECK_TESTER_EXEC "%s" --match-full-lines

; CHECK: Could not open check file 'file/does/not/exist': No such file or directory
; CHECK-EMPTY:
